# beets-audible

./: .pre-commit-config.yaml  .pylintrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  api.py  audible.py  book.py  development.md  goodreads.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  strip_html.py  test-requirements.txt  tox.ini  utils.py
.github/: release.yml
.github/workflows/: lint.yml  release.yml
beetsplug/: api.py  audible.py  book.py  goodreads.py
scripts/: extract_changelog_section.sh
tests/: conftest.py  test_api.py  test_audible.py
