[project]
name = "beets-audible"
version = "1.2.0"
description = "Beets plugin for audiobook management"
authors = [
    { name = "Dickson Tan", email = "dickson.tan.2013@gmail.com" }
]
keywords = ["beets", "audible"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
readme = "readme.md"
requires-python = ">=3.9"

dependencies = [
  "beets >=2.5,<2.6",
  "markdownify >=1,<2",
  "natsort >=8,<9",
  "tldextract >=5,<6",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "beetsplug"
namespace = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[project.urls]
Homepage = "https://github.com/Neurrone/beets-audible"
Documentation = "https://github.com/Neurrone/beets-audible"
Repository = "https://github.com/Neurrone/beets-audible"
Issues = "https://github.com/Neurrone/beets-audible/issues"
Changelog = "https://github.com/Neurrone/beets-audible/blob/main/CHANGELOG.md"
