[project]
name = "beets-audible"
version = "1.2.0"
description = "Beets plugin for audiobook management"
authors = [
    { name = "Dickson Tan", email = "dickson.tan.2013@gmail.com" }
]
keywords = ["beets", "audible"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
readme = "readme.md"
requires-python = ">=3.9"

dependencies = [
  "beets >=2.5,<2.6",
  "markdownify >=1,<2",
  "natsort >=8,<9",
  "tldextract >=5,<6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff==0.14.5"
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "beetsplug"
namespace = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "UP",
  "B",
  "SIM",
  "PT",
  "RUF",
]

[project.urls]
Homepage = "https://github.com/Neurrone/beets-audible"
Documentation = "https://github.com/Neurrone/beets-audible"
Repository = "https://github.com/Neurrone/beets-audible"
Issues = "https://github.com/Neurrone/beets-audible/issues"
Changelog = "https://github.com/Neurrone/beets-audible/blob/main/CHANGELOG.md"
